--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
             max-width: 100%;
             max-height: 100%;
         }
+     .info-box {
+    background-color: rgba(255, 0, 0, 0.5); /* Red color with 50% transparency */
+    color: white; /* Font color */
+    padding: 20px; /* Padding inside the box */
+    margin: 20px auto; /* Center the box horizontally with some margin */
+    max-width: 600px; /* Maximum width of the box */
+    text-align: center; /* Center the text */
+}
+
     </style>
 </head>
 
@@ -238,6 +247,10 @@
             </form>
         </div>
     </div>
+<div class="info-box">
+    <h2>About Warner Bros Website</h2>
+    <p>Welcome to the Warner Bros Website. Here you can find the latest movies, TV shows, games, and more!</p>
+</div>
 
     <!-- Footer -->
     <footer>
