--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
             <img src="kung fu.jpeg" alt="Slide 1">
         </div>
         <div class="mySlides fade">
-            <img src="thunder.jpeg" alt="Slide 2">
+            <img src="bel.jpeg" alt="Slide 2">
         </div>
         <div class="mySlides fade">
-            <img src="nfs.jpeg" alt="Slide 3">
+            <img src="mort.jpeg" alt="Slide 3">
         </div>
     </div>
 </div>
