--- a/movies.html
+++ b/movies.html
@@ -4,156 +4,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Movies</title>
-    <style>
-        /* General Styles */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        .horizontal-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        .image-item {
-            margin: 10px;
-            text-align: center;
-            position: relative;
-        }
-
-        .image-item img {
-            display: block;
-            max-width: 100%;
-            transition: transform 0.3s;
-        }
-
-        .image-title {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 5px;
-            margin: 0;
-            transition: opacity 0.3s;
-            opacity: 0;
-        }
-
-        .image-item:hover .image-title {
-            opacity: 1;
-        }
-
-        .image-item:hover img {
-            transform: scale(1.1);
-        }
-
-        /* Video Background */
-        video {
-            position: fixed;
-            right: 0;
-            bottom: 0;
-            min-width: 100%;
-            min-height: 100%;
-            z-index: -1;
-        }
-
-        /* Content Styling */
-        .content {
-            position: relative;
-            z-index: 1;
-            color: white;
-            padding-bottom: 80px;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            z-index: 3;
-        }
-
-        .social-media-icons {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .social-media-icons li {
-            display: inline;
-            margin: 0 10px;
-        }
-
-        .social-media-icons li a {
-            display: inline-block;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: #fff;
-            line-height: 40px;
-            text-align: center;
-        }
-
-        .social-media-icons li a img {
-            vertical-align: middle;
-            max-width: 100%;
-            max-height: 100%;
-        }
-
-     /* Navigation Styles */
-header {
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-    padding: 20px 0; /* Add padding to top and bottom */
-}
-
-nav {
-    display: flex; /* Make navigation items aligned horizontally */
-    justify-content: space-between; /* Spread navigation items evenly */
-    align-items: center; /* Align items vertically */
-    max-width: 1200px; /* Limit navigation width */
-    margin: 0 auto; /* Center navigation */
-}
-
-.logo img {
-    height: 50px; /* Adjust logo height */
-    width: auto; /* Maintain aspect ratio */
-    margin-left: 20px; /* Add margin to the left of the logo */
-}
-
-ul {
-    list-style-type: none; /* Remove bullet points from list */
-    margin: 0;
-    padding: 0;
-}
-
-ul li {
-    display: inline; /* Display list items horizontally */
-    margin-right: 20px; /* Add margin between list items */
-}
-
-ul li:last-child {
-    margin-right: 0; /* Remove margin from the last list item */
-}
-
-ul li a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s; /* Adding a smooth transition for color change */
-}
-
-ul li a:hover {
-    color: red; /* Changing text color to red on hover */
-}
-    </style>
+    <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
 
 <body>
