--- a/movies.html
+++ b/movies.html
@@ -20,7 +20,7 @@
             <!-- Logo -->
             <div class="logo">
                 <a href="#top">
-                    <img alt="logo" src="Screenshot 2024-04-12 160015.png">
+                    <img alt="logo" src="logo.jpeg">
                 </a>
             </div>
 
