--- a/movies.html
+++ b/movies.html
@@ -9,18 +9,20 @@
 
 <body>
     <!-- Video Background -->
-    <video autoplay loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <div class="video-background">
+        <video id="background-video" autoplay loop muted>
+            <source src="background.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 
     <!-- Content -->
     <div class="content">
         <header>
             <!-- Logo -->
-           <figure>
-      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
-    </figure>
+            <figure>
+                <a href="#top"><img alt="logo" src="R.png"></a>
+            </figure>
 
             <!-- Navigation -->
             <nav>
@@ -34,26 +36,26 @@
                 </ul>
             </nav>
         </header>
-        <section class="horizontal-container slideshow-container">
-    <figure class="image-item mySlides fade">
-      <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
-      <figcaption class="image-title">King-Kong vs Godzilla</figcaption>
-    </figure>
-    <figure class="image-item mySlides fade">
-      <a href="joker.html"><img alt="joker" height="234" src="joker.jpeg" width="149"></a>
-      <figcaption class="image-title">The Joker</figcaption>
-    </figure>
-    <figure class="image-item mySlides fade">
-      <a href="kung fu panda.html"><img alt="kung" height="234" src="kung%20fu.jpeg" width="149"></a>
-      <figcaption class="image-title">The Kung Fu Panda 4</figcaption>
-    </figure>
-    <figure class="image-item mySlides fade">
-      <a href="bee.html"><img alt="Bee" height="234" src="bee.jpeg" width="143"></a>
-      <figcaption class="image-title">The Beekeeper</figcaption>
-    </figure>
-    <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
-    <button class="next" onclick="plusSlides(1)">&#10095;</button>
-  </section>
+       <section class="horizontal-container slideshow-container">
+            <figure class="image-item mySlides fade">
+                <a href="king kong.html"><img alt="KingKong" src="king%20kong.jpeg"></a>
+                <figcaption class="image-title">King-Kong vs Godzilla</figcaption>
+            </figure>
+            <figure class="image-item mySlides fade">
+                <a href="joker.html"><img alt="joker" src="joker.jpeg"></a>
+                <figcaption class="image-title">The Joker</figcaption>
+            </figure>
+            <figure class="image-item mySlides fade">
+                <a href="kung fu panda.html"><img alt="kung" src="kung%20fu.jpeg"></a>
+                <figcaption class="image-title">The Kung Fu Panda 4</figcaption>
+            </figure>
+            <figure class="image-item mySlides fade">
+                <a href="bee.html"><img alt="Bee" src="bee.jpeg"></a>
+                <figcaption class="image-title">The Beekeeper</figcaption>
+            </figure>
+            <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+            <button class="next" onclick="plusSlides(1)">&#10095;</button>
+        </section>
         
 <section class="horizontal-container">
     <figure class="image-item">
@@ -153,42 +155,37 @@
       <figcaption class="image-title">No Hard Feelings</figcaption>
     </figure>
   </section>
-
-
-    <!-- Footer -->
     <footer>
-        <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
-            <!-- Add more social media icons as needed -->
-        </ul>
-        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
-    </footer>
-         <script>
-    var slideIndex = 1;
-    showSlides(slideIndex);
+            <ul class="social-media-icons">
+                <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+                <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+                <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+                <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+                <!-- Add more social media icons as needed -->
+            </ul>
+            <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
+        </footer>
+    </div>
 
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
+    <script>
+        var slideIndex = 1;
+        showSlides(slideIndex);
 
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
 
-    function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-      }
-      slides[slideIndex-1].style.display = "block";
-    }
-         </script>
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slides[slideIndex - 1].style.display = "block";
+        }
+    </script>
 </body>
 
 </html>
