--- a/movies.html
+++ b/movies.html
@@ -36,26 +36,31 @@
                 </ul>
             </nav>
         </header>
-       <section class="horizontal-container slideshow-container">
-            <figure class="image-item mySlides fade">
-                <a href="king kong.html"><img alt="KingKong" src="king%20kong.jpeg"></a>
-                <figcaption class="image-title">King-Kong vs Godzilla</figcaption>
-            </figure>
-            <figure class="image-item mySlides fade">
-                <a href="joker.html"><img alt="joker" src="joker.jpeg"></a>
-                <figcaption class="image-title">The Joker</figcaption>
-            </figure>
-            <figure class="image-item mySlides fade">
-                <a href="kung fu panda.html"><img alt="kung" src="kung%20fu.jpeg"></a>
-                <figcaption class="image-title">The Kung Fu Panda 4</figcaption>
-            </figure>
-            <figure class="image-item mySlides fade">
-                <a href="bee.html"><img alt="Bee" src="bee.jpeg"></a>
-                <figcaption class="image-title">The Beekeeper</figcaption>
-            </figure>
-            <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
-            <button class="next" onclick="plusSlides(1)">&#10095;</button>
-        </section>
+         <section class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="king%20kong.jpeg">
+      <h1>The Tom and Jerry<br>Trending Movies</h1>
+    </div>
+
+    <div class="mySlides fade">
+      <img src="joker.jpeg">
+      <h1>The Joker<br>New Movies</h1>
+    </div>
+
+    <div class="mySlides fade">
+      <img src="bee.jpeg">
+      <h1>The Beekeeper<br>What's Hot</h1>
+    </div>
+
+    <button class="prev" onclick="plusSlides(-1)">❮</button>
+    <button class="next" onclick="plusSlides(1)">❯</button>
+  </section>
+
+  <section style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+ 
         
 <section class="horizontal-container">
     <figure class="image-item">
