--- a/movies.html
+++ b/movies.html
@@ -60,106 +60,45 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
- 
-        
-<section class="horizontal-container">
-    <figure class="image-item">
-      <a href="king kong.html"><img alt="KingKong" height="234" src="king%20kong.jpeg" width="149"></a>
-      <figcaption class="image-title">King-Kong vs Godzilla</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="joker.html"><img alt="joker" height="234" src="joker.jpeg" width="149"></a>
-      <figcaption class="image-title">The Joker</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="kung fu panda.html"><img alt="kung" height="234" src="kung%20fu.jpeg" width="149"></a>
-      <figcaption class="image-title">The Kung Fu Panda 4</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="bee.html"><img alt="Bee" height="234" src="bee.jpeg" width="143"></a>
-      <figcaption class="image-title">The Beekeeper</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="blue.html"> <img alt="blue" height="234" src="blue.jpeg" width="149"></a>
-      <figcaption class="image-title">Blue Beetle</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="equal.html"><img alt="equal" height="234" src="equal.jpeg" width="149"></a>
-      <figcaption class="image-title">The Equalizer 3</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="red.html"><img alt="red-notice-banner.jpg" height="234" src="red-notice-banner.jpg" width="149"></a>
-      <figcaption class="image-title">The Red Notice</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="lift.html"><img alt="lift.jpeg" height="234" src="lift.jpeg" width="149"></a>
-      <figcaption class="image-title">The Lift</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="expend.html"><img alt="expend.jpeg" height="234" src="expend.jpeg" width="149"></a>
-      <figcaption class="image-title">The Expend4bles</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="dune.html"><img alt="dune.jpeg" height="234" src="dune.jpeg" width="149"></a>
-      <figcaption class="image-title">The Dune</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="flash.html"><img alt="Flash.jpg" height="234" src="Flash.jpg" width="149"></a>
-      <figcaption class="image-title">The Flash</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="jumanji.html"><img alt="jumanji.jpeg" height="234" src="jumanji.jpeg" width="149"></a>
-      <figcaption class="image-title">Jumanji To The Next Level</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="meg.html"><img alt="meg.jpeg" height="234" src="meg.jpeg" width="149"></a>
-      <figcaption class="image-title">The Meg 2</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="vol3.html"><img alt="vol 3.jpeg" height="234" src="vol 3.jpeg" width="149"></a>
-      <figcaption class="image-title">Guardians of the Galaxy Vol. 3</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="mother.html"><img alt="acti.jpeg" height="234" src="acti.jpeg" width="149"></a>
-      <figcaption class="image-title">The Mother</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="deadpool.html"><img alt="deadpool.jpeg" height="234" src="deadpool.jpeg" width="149"></a>
-      <figcaption class="image-title">Deadpool</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="dead.html"><img alt="dead.jpeg" height="234" src="dead.jpeg" width="149"></a>
-      <figcaption class="image-title">Deadshot</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="john.html"><img alt="john.jpeg" height="234" src="john.jpeg" width="149"></a>
-      <figcaption class="image-title">John Wick Chapter 4</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="man.html"><img alt="monkey.jpeg" height="234" src="monkey.jpeg" width="149"></a>
-      <figcaption class="image-title">Monkey Man</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="nun.html"><img alt="nun.jpeg" height="234" src="nun.jpeg" width="149"></a>
-      <figcaption class="image-title">The Nun II</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="love.html"><img alt="love.jpeg" height="234" src="love.jpeg" width="149"></a>
-      <figcaption class="image-title">Love and Love Not</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="boy.html"><img alt="the boy.jpeg" height="234" src="the boy.jpeg" width="149"></a>
-      <figcaption class="image-title">The Boy Next Door</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="sisu.html"><img alt="sisu.jpeg" height="234" src="sisu.jpeg" width="149"></a>
-      <figcaption class="image-title">Sisu</figcaption>
-    </figure>
-    <figure class="image-item">
-      <a href="romance.html"><img alt="romance.jpeg" height="234" src="romance.jpeg" width="149"></a>
-      <figcaption class="image-title">No Hard Feelings</figcaption>
-    </figure>
+ <section>
+    <h2>Trending Movies</h2>
+    <div class="movies">
+      <a href="king kong.html"><img src="king%20kong.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="joker.html"><img src="joker.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="kung fu panda.html"><img src="kung%20fu.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="bee.html"><img src="bee.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234">
+    </div>
   </section>
+
+  <section>
+    <h2>New Movies</h2>
+    <div class="movies">
+       <a href="equal.html"><img src="equal.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="expend.html"><img src="expend.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="dune.html"><img src="dune.jpeg"  width="149" alt="New Movies" height="234">
+       <a href="vol3.html"><img src="vol 3.jpeg"  width="149" alt="New Movies" height="234">
+       <a href="deadpool.html"><img src="deadpool.jpeg" width="149" alt="New Movies" height="234">
+       <a href="john.html"><img src="john.jpeg" width="149" alt="New Movies" height="234">
+       <a href="sisu.html"><img src="sisu.jpeg" width="149" alt="New Movies" height="234"> 
+       <a href="dead.html"><img src="dead.jpeg" width="149" alt="New Movies" height="234"> 
+    </div>
+  </section>
+
+  <section>
+    <h2>Hot Movies</h2>
+    <div class="movies">
+      <a href="red.html"><img src="red-notice-banner.jpg" width="149" alt="Hot Movies" height="234">
+      <a href="lift.html"><img src="lift.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="jumanji.html"><img src="jumanji.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="meg.html"><<img src="meg.jpeg" width="149" alt="Hot Movies" height="234">
+      <a href="mother.html"><img src="acti.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="romance.html"><img src="romance.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="boy.html"><img src="the boy.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="love.html"><img src="love.jpeg"  width="149" alt="Hot Movies" height="234">  
+    </div>   
     <footer>
             <ul class="social-media-icons">
                 <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
