--- a/movies.html
+++ b/movies.html
@@ -38,18 +38,18 @@
         </header>
          <section class="slideshow-container">
     <div class="mySlides fade">
-      <img src="king%20kong.jpeg">
-      <h1>The Tom and Jerry<br>Trending Movies</h1>
+      <img src="john.jpeg">
+      <h1>The John Wick <br>New Movies</h1>
     </div>
 
     <div class="mySlides fade">
-      <img src="joker.jpeg">
-      <h1>The Joker<br>New Movies</h1>
+      <img src="monkey.jpeg">
+      <h1>The Monkey Man<br>Trending Movies</h1>
     </div>
 
     <div class="mySlides fade">
-      <img src="bee.jpeg">
-      <h1>The Beekeeper<br>What's Hot</h1>
+      <img src="meg.jpeg">
+      <h1>The Meg 2<br>Hot Movies</h1>
     </div>
 
     <button class="prev" onclick="plusSlides(-1)">❮</button>
