--- a/movies.html
+++ b/movies.html
@@ -36,75 +36,70 @@
                 </ul>
             </nav>
         </header>
+         <section class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="john.jpeg">
+      <h1>The John Wick <br>New Movies</h1>
+    </div>
 
-        <section class="slideshow-container">
-            <div class="mySlides fade">
-                <img class="slide-img" src="john.jpeg" alt="The John Wick">
-                <h1>The John Wick <br>New Movies</h1>
-            </div>
+    <div class="mySlides fade">
+      <img src="monkey.jpeg">
+      <h1>The Monkey Man<br>Trending Movies</h1>
+    </div>
 
-            <div class="mySlides fade">
-                <img class="slide-img" src="monkey.jpeg" alt="The Monkey Man">
-                <h1>The Monkey Man<br>Trending Movies</h1>
-            </div>
+    <div class="mySlides fade">
+      <img src="meg.jpeg">
+      <h1>The Meg 2<br>Hot Movies</h1>
+    </div>
 
-            <div class="mySlides fade">
-                <img class="slide-img" src="meg.jpeg" alt="The Meg 2">
-                <h1>The Meg 2<br>Hot Movies</h1>
-            </div>
+    <button class="prev" onclick="plusSlides(-1)">❮</button>
+    <button class="next" onclick="plusSlides(1)">❯</button>
+  </section>
 
-            <button class="prev" onclick="plusSlides(-1)">❮</button>
-            <button class="next" onclick="plusSlides(1)">❯</button>
-        </section>
+  <section style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+ <section>
+    <h2>Trending Movies</h2>
+    <div class="movies">
+      <a href="king kong.html"><img src="king%20kong.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="joker.html"><img src="joker.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="kung fu panda.html"><img src="kung%20fu.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="bee.html"><img src="bee.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234">
+    </div>
+  </section>
 
-        <section style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-        </section>
+  <section>
+    <h2>New Movies</h2>
+    <div class="movies">
+      <a href="equal.html"><img src="equal.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="expend.html"><img src="expend.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="dune.html"><img src="dune.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="vol3.html"><img src="vol 3.jpeg"  width="149" alt="New Movies" height="234">
+      <a href="deadpool.html"><img src="deadpool.jpeg" width="149" alt="New Movies" height="234">
+      <a href="john.html"><img src="john.jpeg" width="149" alt="New Movies" height="234">
+      <a href="sisu.html"><img src="sisu.jpeg" width="149" alt="New Movies" height="234"> 
+      <a href="dead.html"><img src="dead.jpeg" width="149" alt="New Movies" height="234"> 
+    </div>
+  </section>
 
-        <section>
-            <h2>Trending Movies</h2>
-            <div class="movies">
-                <a href="king kong.html"><img src="king%20kong.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="joker.html"><img src="joker.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="kung fu panda.html"><img src="kung%20fu.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="bee.html"><img src="bee.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="blue.html"><img src="blue.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="nun.html"><img src="nun.jpeg" class="movie-img" alt="Trending Movies"></a>
-                <a href="man.html"><img src="monkey.jpeg" class="movie-img" alt="Trending Movies"></a>
-            </div>
-        </section>
-
-        <section>
-            <h2>New Movies</h2>
-            <div class="movies">
-                <a href="equal.html"><img src="equal.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="expend.html"><img src="expend.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="dune.html"><img src="dune.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="vol3.html"><img src="vol 3.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="deadpool.html"><img src="deadpool.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="john.html"><img src="john.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="sisu.html"><img src="sisu.jpeg" class="movie-img" alt="New Movies"></a>
-                <a href="dead.html"><img src="dead.jpeg" class="movie-img" alt="New Movies"></a>
-            </div>
-        </section>
-
-        <section>
-            <h2>Hot Movies</h2>
-            <div class="movies">
-                <a href="red.html"><img src="red-notice-banner.jpg" class="movie-img" alt="Hot Movies"></a>
-                <a href="lift.html"><img src="lift.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="jumanji.html"><img src="jumanji.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="meg.html"><img src="meg.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="mother.html"><img src="acti.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="romance.html"><img src="romance.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="boy.html"><img src="the boy.jpeg" class="movie-img" alt="Hot Movies"></a>
-                <a href="love.html"><img src="love.jpeg" class="movie-img" alt="Hot Movies"></a>
-            </div>
-        </section>
-
-        <footer>
+  <section>
+    <h2>Hot Movies</h2>
+    <div class="movies">
+      <a href="red.html"><img src="red-notice-banner.jpg" width="149" alt="Hot Movies" height="234">
+      <a href="lift.html"><img src="lift.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="jumanji.html"><img src="jumanji.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="meg.html"><<img src="meg.jpeg" width="149" alt="Hot Movies" height="234">
+      <a href="mother.html"><img src="acti.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="romance.html"><img src="romance.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="boy.html"><img src="the boy.jpeg"  width="149" alt="Hot Movies" height="234">
+      <a href="love.html"><img src="love.jpeg"  width="149" alt="Hot Movies" height="234">  
+    </div>   
+    <footer>
             <ul class="social-media-icons">
                 <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
                 <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
@@ -124,24 +119,15 @@
             showSlides(slideIndex += n);
         }
 
-        function currentSlide(n) {
-            showSlides(slideIndex = n);
-        }
-
         function showSlides(n) {
             var i;
             var slides = document.getElementsByClassName("mySlides");
-            var dots = document.getElementsByClassName("dot");
             if (n > slides.length) { slideIndex = 1 }
             if (n < 1) { slideIndex = slides.length }
             for (i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
             }
-            for (i = 0; i < dots.length; i++) {
-                dots[i].className = dots[i].className.replace(" active", "");
-            }
             slides[slideIndex - 1].style.display = "block";
-            dots[slideIndex - 1].className += " active";
         }
     </script>
 </body>
