--- a/movies.html
+++ b/movies.html
@@ -63,41 +63,41 @@
  <section>
     <h2>Trending Movies</h2>
     <div class="movies">
-      <a href="king kong.html"><img src="king%20kong.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="joker.html"><img src="joker.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="kung fu panda.html"><img src="kung%20fu.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="bee.html"><img src="bee.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234">
-      <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234">
+      <a href="king kong.html"><img src="king%20kong.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="joker.html"><img src="joker.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="kung fu panda.html"><img src="kung%20fu.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="bee.html"><img src="bee.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234"></a>
     </div>
   </section>
 
   <section>
     <h2>New Movies</h2>
     <div class="movies">
-      <a href="equal.html"><img src="equal.jpeg"  width="149" alt="New Movies" height="234">
-      <a href="expend.html"><img src="expend.jpeg"  width="149" alt="New Movies" height="234">
-      <a href="dune.html"><img src="dune.jpeg"  width="149" alt="New Movies" height="234">
-      <a href="vol3.html"><img src="vol 3.jpeg"  width="149" alt="New Movies" height="234">
-      <a href="deadpool.html"><img src="deadpool.jpeg" width="149" alt="New Movies" height="234">
-      <a href="john.html"><img src="john.jpeg" width="149" alt="New Movies" height="234">
-      <a href="sisu.html"><img src="sisu.jpeg" width="149" alt="New Movies" height="234"> 
-      <a href="dead.html"><img src="dead.jpeg" width="149" alt="New Movies" height="234"> 
+      <a href="equal.html"><img src="equal.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="expend.html"><img src="expend.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="dune.html"><img src="dune.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="vol3.html"><img src="vol 3.jpeg"  width="149" alt="New Movies" height="234"></a>
+      <a href="deadpool.html"><img src="deadpool.jpeg" width="149" alt="New Movies" height="234"></a>
+      <a href="john.html"><img src="john.jpeg" width="149" alt="New Movies" height="234"></a>
+      <a href="sisu.html"><img src="sisu.jpeg" width="149" alt="New Movies" height="234"></a> 
+      <a href="dead.html"><img src="dead.jpeg" width="149" alt="New Movies" height="234"> </a>
     </div>
   </section>
 
   <section>
     <h2>Hot Movies</h2>
     <div class="movies">
-      <a href="red.html"><img src="red-notice-banner.jpg" width="149" alt="Hot Movies" height="234">
-      <a href="lift.html"><img src="lift.jpeg"  width="149" alt="Hot Movies" height="234">
-      <a href="jumanji.html"><img src="jumanji.jpeg"  width="149" alt="Hot Movies" height="234">
-      <a href="meg.html"><<img src="meg.jpeg" width="149" alt="Hot Movies" height="234">
-      <a href="mother.html"><img src="acti.jpeg"  width="149" alt="Hot Movies" height="234">
-      <a href="romance.html"><img src="romance.jpeg"  width="149" alt="Hot Movies" height="234">
-      <a href="boy.html"><img src="the boy.jpeg"  width="149" alt="Hot Movies" height="234">
-      <a href="love.html"><img src="love.jpeg"  width="149" alt="Hot Movies" height="234">  
+      <a href="red.html"><img src="red-notice-banner.jpg" width="149" alt="Hot Movies" height="234"></a>
+      <a href="lift.html"><img src="lift.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="jumanji.html"><img src="jumanji.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="meg.html"><<img src="meg.jpeg" width="149" alt="Hot Movies" height="234"></a>
+      <a href="mother.html"><img src="acti.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="romance.html"><img src="romance.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="boy.html"><img src="the boy.jpeg"  width="149" alt="Hot Movies" height="234"></a>
+      <a href="love.html"><img src="love.jpeg"  width="149" alt="Hot Movies" height="234"></a>  
     </div>   
     <footer>
             <ul class="social-media-icons">
