--- a/collections.html
+++ b/collections.html
@@ -2,7 +2,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Movies</title>
-<link rel="stylesheet" type="text/css" href="collection.css">
+<link rel="stylesheet" type="text/css" href="movies.css">
 
 </head>
 
